# iq_puzzler

./: .windsurfrules  README.md  detailed_design.md  pyproject.toml  render.yaml  requirements.md  requirements.txt  rotations.md  solution_documentation.md
api/: Dockerfile  app.py  requirements.txt
data/: puzzle-120.json
docs/: detailed_design.md
piece_builder/: index.html  script.js  styles.css
puzzle_vis/: deployment.config.example.js  next.config.ts  package-lock.json  package.json
puzzle_vis/public/: piece-builder.js
puzzle_vis/public/data/: default_puzzle.json  piece_library.json  solution-100.json
puzzle_vis/src/app/: layout.tsx  page.tsx
puzzle_vis/src/app/pieces/: page.tsx
puzzle_vis/src/app/visualizer/: page.tsx
puzzle_vis/src/components/: Navigation.tsx  PuzzleViewer.tsx
puzzle_vis/src/types/: puzzle.ts
puzzle_vis/src/utils/: hooks.ts  puzzleUtils.ts
src/: piece.py  piece3d.py  piece_manager.py  position_validator.py  puzzle_state.py
src/iq_puzzler/: backtracking_solver.py  cli.py  coordinate_transformations.py  coordinates.py  diamonds_model.py  dlx_solver.py  piece_library.py  piece_manager.py  position_validator.py  puzzle_model.py  puzzle_piece.py  puzzle_piece_transformer.py  puzzle_state.py  pyramid_model.py  rectangle_model.py
tests/: conftest.py  test_coordinate_transformations.py  test_piece.py  test_piece3d.py  test_piece_library.py  test_piece_manager.py  test_position_validator.py  test_puzzle_piece.py  test_puzzle_piece_transformer.py  test_puzzle_state.py  test_pyramid_model.py
(+2 files in other folders)
