[project]
name = "iq-puzzler"
version = "0.2.0"
description = "IQ Puzzler Pro solver with multiple game modes and solving strategies"
authors = []
dependencies = [
    "click>=8.1.0",
    "numpy>=1.26.2",
    "colorama>=0.4.6",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
iq-puzzler = "iq_puzzler.cli:main"

[dependency-groups]
dev = [
    "ruff==0.6.4",
    "pytest>=7.4.3",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build]
packages = ["src/iq_puzzler"]